objects/PRMProfileConfig__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Component__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The name of the component that shows the Profile Form.</description>
        <inlineHelpText>The name of the component that shows the Profile Form.</inlineHelpText>
        <label>Component</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>FieloEE__Component__c.RecordType.Name</field>
                <operation>equals</operation>
                <value>C_FeatureProgressiveProfile</value>
            </filterItems>
            <infoMessage>Please select a &quot;Custom Profile Form&quot; Component</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>FieloEE__Component__c</referenceTo>
        <relationshipLabel>PRM Profile Configs</relationshipLabel>
        <relationshipName>PRM_Profile_Configs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CountryChannel__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Country Channel</label>
        <referenceTo>CountryChannels__c</referenceTo>
        <relationshipLabel>Progressive Profile Configuration</relationshipLabel>
        <relationshipName>PRMProfileConfigs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EventCatalog__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Event Catalog</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR (2 AND 3)</booleanFilter>
            <filterItems>
                <field>$User.BypassVR__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>FieloPRM_EventCatalog__c.F_PRM_isActive__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>FieloPRM_EventCatalog__c.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>Automatic</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>FieloPRM_EventCatalog__c</referenceTo>
        <relationshipLabel>PRM Profile Configs</relationshipLabel>
        <relationshipName>PRM_Profile_Configs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FeatureCatalog__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Feature Catalog</label>
        <referenceTo>FeatureCatalog__c</referenceTo>
        <relationshipLabel>PRM Profile Configs</relationshipLabel>
        <relationshipName>PRM_Profile_Configs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ManageConfiguration__c</fullName>
        <formula>HYPERLINK(&quot;/apex/VFP_ConfigureProgressiveProfile?from=manage&amp;prmConfigId=&quot;+Id+&quot;&amp;channelId=&quot;+CountryChannel__c+&quot;&amp;cntryId=&quot;+PRMCountryClusterSetup__c+&quot;&amp;Name=&quot;+Name+&quot;&amp;eventCatalog=&quot;+EventCatalog__c+&quot;&quot;,&quot;Manage&quot;,&quot;_self&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Manage Configuration</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PRMCountryClusterSetup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PRM Country / Cluster Setup</label>
        <referenceTo>PRMCountry__c</referenceTo>
        <relationshipLabel>Progressive Profile Configuration</relationshipLabel>
        <relationshipName>PRMProfileConfigs</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>PRM Profile Config</label>
    <nameField>
        <label>PRMProfileConfig Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PRM Profile Configs</pluralLabel>
    <recordTypes>
        <fullName>ChannelLevelProfileForm</fullName>
        <active>true</active>
        <description>Progressive profile form used at the Country Channel level</description>
        <label>Channel Level Profile Form</label>
    </recordTypes>
    <recordTypes>
        <fullName>CountryLevelProfileForm</fullName>
        <active>true</active>
        <description>This is the profile form at the PRM Country / Cluster level</description>
        <label>Country Level Profile Form</label>
    </recordTypes>
    <recordTypes>
        <fullName>FeatureLevelProfileForm</fullName>
        <active>true</active>
        <description>Progressive Profile form used at channel Feature level</description>
        <label>Feature Level Profile Form</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>